# Agent-Family

./: .env.example  .gitignore  AI_CONTEXT.md  CREDENTIALS.md  LICENSE  PROJECT_EVALUATION.md  README.md  SCALING_AGENTS_GUIDE.md  pyproject.toml
agent_family/: __init__.py  runner.py  server.py
agent_family/a2a/: __init__.py  agent_card.py  responses.py  schemas.py
agent_family/agents/: __init__.py  base.py  calendar_agent.py  master_agent.py  task_agent.py
agent_family/auth/: __init__.py  oauth2.py  session_store.py  token_store.py
agent_family/mcp_servers/: __init__.py  base.py  calendar_server.py  tasks_server.py
agent_family/registry/: __init__.py  registry.py
agent_family/tools/: __init__.py  backoff.py  confirmation.py
tests/: conftest.py  test_agents_structured.py  test_auth.py  test_backoff.py  test_concurrent.py  test_master_routing.py  test_mcp_servers.py  test_registry.py  test_responses.py  test_schemas.py
web/: package-lock.json  package.json
web/__tests__/: AuthGuard.test.tsx  ChatInterface.test.tsx  MessageCard.test.tsx  SignInPrompt.test.tsx
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AuthGuard.tsx  ChatInterface.tsx  FamilySwiper.tsx  FamilyTree.tsx  MessageCard.tsx  SignInPrompt.tsx
web/src/context/: AuthContext.tsx
